--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -10,8 +10,24 @@
   margin-bottom: 10px;
 }
 
-.popup__input:last-of-type {
-  margin-bottom: 0;
+.popup__input-error {
+  display: block;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
+  color: #FF0000;
+  margin-top: 0px;
+  padding: 0;
+  margin-bottom: 13px; 
+}
+
+.popup__input:valid {
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
+}
+
+.form__input_type_error {
+  border-bottom: 1px solid #ff0000;
 }
 
 @media screen and (max-width: 568px) {
