--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -21,3 +21,14 @@
   right: 0;
   z-index: 10;
 }
+
+.popup__content_photo {
+  max-width: 430px;
+  width: 100%;
+  min-height: 272px;
+  background-color: #fff;
+  border-radius: 10px;
+  position: relative;
+  box-sizing: border-box;
+  padding: 34px 36px;
+}
